--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,7 @@ services:
     name: nexus-server-bot
     env: python
     plan: free
+    build:
+      pythonVersion: 3.11.8
     buildCommand: pip install -r requirements.txt
     startCommand: python main.py
-    pythonVersion: 3.11.8
